# autotraj

./: .gitignore  append_individual_traj_csvs.py  check_traj_health.py  oversampling.py  oversampling_pbe0_lisbo3.py  parallelised_charge_correction.py  pyproject.toml  unified.py
autotraj/: REF_key_converter.py  __init__.py  driver.py  file_append.py  filter_fully_ionized_runs.py  oversampling.py  oversampling_pbe0.py  oversampling_pbe0_FI_c.py  oversampling_pbe0_FI_nc.py  unified.py  utils.py
bulk_parsing_outcar/: job_hse06_bulks  job_iml_bulks  job_pbe0_bulks
bulk_parsing_outcar/logging/: 12766192[0].pbs101.OU  12766192[1].pbs101.OU  12766192[2].pbs101.OU  12766192[3].pbs101.OU  12766192[4].pbs101.OU  12766192[5].pbs101.OU  12766192[6].pbs101.OU  12766192[7].pbs101.OU  12766193[0].pbs101.OU  12766193[1].pbs101.OU  12766193[2].pbs101.OU  12766193[3].pbs101.OU  12766193[4].pbs101.OU  12766193[5].pbs101.OU  12766193[6].pbs101.OU  12766193[7].pbs101.OU  12766198[0].pbs101.OU  12766198[1].pbs101.OU  12766198[2].pbs101.OU  12766198[3].pbs101.OU  12766198[4].pbs101.OU  12766198[5].pbs101.OU  12766198[6].pbs101.OU  12766198[7].pbs101.OU
bulk_parsing_outcar/logging/old/: 12715570[0].pbs101.OU  12715570[1].pbs101.OU  12715570[2].pbs101.OU  12715570[3].pbs101.OU  12715570[4].pbs101.OU  12715570[5].pbs101.OU  12715570[6].pbs101.OU  12715570[7].pbs101.OU  12765611[0].pbs101.OU  12765611[1].pbs101.OU  12765611[2].pbs101.OU  12765611[3].pbs101.OU  12765611[4].pbs101.OU  12765611[5].pbs101.OU  12765611[6].pbs101.OU  12765611[7].pbs101.OU  12765612[0].pbs101.OU  (+71 more)
old/: utils.py
